AdolaDEVMeta/force-app/main/default/objects/Address_Account__c/Address_Account__c.object-meta.xml
<CustomObject>
    <label>Address Account</label>
    <nameField>
        <label>Address Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Address Account</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>