AdolaDEVMeta/force-app/main/default/objects/Address_Account__c/fields/Address_Custom__c.field-meta.xml
<CustomField>
    <fullName>Address_Custom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Address Account</relationshipLabel>
    <relationshipName>Address_Account</relationshipName>
    <type>Lookup</type>
</CustomField>