AdolaDEVMeta/force-app/main/default/objects/Address_Account__c/fields/Area_Status__c.field-meta.xml
<CustomField>
    <fullName>Area_Status__c</fullName>
    <description>Area status from Location</description>
    <label>Area Status</label>
    <length>128</length>
    <type>Text</type>
</CustomField>